--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Yauheni Shcharbakou <iipekolict@gmail.com>",
   "license": "MIT",
   "version": "0.0.0",
+  "homepage": "https://yauheni-shcharbakou.github.io",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
