fix: add --repo param

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - 'main'
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   Deploy:
     runs-on: 'ubuntu-latest'
@@ -30,4 +33,4 @@ jobs:
       - name: 'Build'
         run: 'yarn build'
       - name: 'Deploy'
-        run: 'yarn deploy'
+        run: 'yarn deploy -- --repo "https://x-access-token:${{ env.GITHUB_TOKEN }}@github.com/user/repo.git"'
